syntax = "proto3";
package IronPdfEngine.Proto;

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message IsValidLicenseRequest{
  string license_key = 1;
}

message IsLicensedRequest{
}
